fix: set proper form-select bg in dark mode

--- a/scss/components/bootstrap/_form.scss
+++ b/scss/components/bootstrap/_form.scss
@@ -1,11 +1,11 @@
-.form-control {
+.form-control, .form-select {
     --#{$prefix}input-bg: #{$input-bg};
     background: var(--#{$prefix}input-bg);
 }
 
 @if $enable-dark-mode {
     @include color-mode(dark) {
-        .form-control {
+        .form-control, .form-select {
             --#{$prefix}input-bg: #{$input-bg-dark};
         }
     }
